Grid Overflow Problem Fix

--- a/RocketLaunchTracker/RocketLaunchTracker/wwwroot/css/site.css
+++ b/RocketLaunchTracker/RocketLaunchTracker/wwwroot/css/site.css
@@ -181,6 +181,15 @@ html, body {
     white-space: nowrap;
 }
 
+.col-lg-4{
+    padding:10px
+}
+#details-screen-full{ 
+    overflow: scroll;
+}
+.row{
+    padding-top:10px;
+}
 #container-row {
     height: 100%;
 }
